# SakuraiSenrin

./: .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  bot.py  pyproject.toml
scripts/water/: render_mock_profile.py
src/: config.py  logger.py
src/common/: enums.py
src/database/: consts.py  instances.py  writers.py
src/database/core/: consts.py  ops.py  tables.py  types.py
src/database/log/: base.py  consts.py  ops.py  tables.py  types.py
src/database/snapshot/: consts.py  ops.py  tables.py  types.py
src/hooks/: __init__.py  plugin.py  processor.py
src/lib/: consts.py  enums.py  types.py  utils.py
src/lib/cache/: __init__.py  base.py  field.py  impl.py
src/lib/db/: batch.py  connectors.py  exceptions.py  manager.py  ops.py  orm.py
src/lib/utils/: common.py  img.py
src/plugins/: help.py  remove.py  sentry.py  study.py  test.py
src/plugins/admin/: __init__.py  group.py  invite.py  user.py
src/plugins/admin/docs/: README.MD
src/plugins/notice/: __init__.py  group.py  invite.py  user.py
src/plugins/notice/docs/: README.MD
src/plugins/water/: __init__.py  img.py  repo.py
src/plugins/water/database/: __init__.py  instances.py  ops.py  repo.py  tables.py  types.py  writers.py
src/plugins/water/docs/: README.MD
src/plugins/water/handlers/: __init__.py  achievement.py  admin.py  merge.py  passive.py
src/plugins/water/services/: __init__.py  achievement.py  matrix_suggestion.py  settlement.py
src/plugins/wordbank/: __init__.py
src/plugins/wordbank/docs/: README.MD
src/repositories/: __init__.py  blacklist.py  group.py  invite.py  member.py  user.py
src/scripts/: install.py  monkey.py
src/services/: db.py  info.py  sync.py  writers.py
tests/: conftest.py
tests/plugins/water/: helpers.py  test_achievement_handler.py  test_achievement_service.py  test_handlers.py  test_matrix_suggestion_service.py  test_repository_edges.py  test_settlement_service.py
